--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
+# Backend API URL
 VITE_API_URL=http://localhost:8080
+
+# Zitadel Authentication
+# For local dev with Zitadel running locally:
+VITE_ZITADEL_AUTHORITY=http://localhost:8085
+VITE_ZITADEL_CLIENT_ID=
+
+# For production:
+# VITE_ZITADEL_AUTHORITY=https://auth.ldumanager.com
+# VITE_ZITADEL_CLIENT_ID=<from-zitadel-console>
+
+# Optional: explicit app URL (defaults to window.location.origin)
+# VITE_APP_URL=http://localhost:3003
